# codeact

./: .env.template  Dockerfile  LICENSE  README.md  build.sh  langgraph.json  pyproject.toml  sample.py
