[project]
name = "codeact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.3.34",
    "langgraph-cli[inmem]>=0.3.6",
    "langgraph-codeact>=0.1.3",
    "llm-sandbox[docker]>=0.3.17",
]
